<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/azul_marino"
    android:padding="10dp"
    android:orientation="vertical"
    tools:context=".ui.fragments.FormularioFragment">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="Formulario"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:hint="@string/numero_factura"
        android:minHeight="48dp"
        android:padding="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:inputType="text"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@color/white"
        android:hint="@string/productor"
        android:minHeight="48dp"
        android:padding="10dp"
        android:inputType="text"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:hint="@string/chofer"
        android:minHeight="48dp"
        android:padding="10dp"
        android:layout_marginBottom="10dp"
        android:inputType="text"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:hint="@string/rut_chofer"
        android:minHeight="48dp"
        android:padding="10dp"
        android:layout_marginBottom="10dp"
        android:inputType="text"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:hint="@string/patente"
        android:minHeight="48dp"
        android:padding="10dp"
        android:layout_marginBottom="10dp"
        android:inputType="text"/>



    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:text="@string/guardar"
        android:backgroundTint="@color/fondo_boton_guardar"/>

</LinearLayout>